LIST OF CHANGES

 - Remove status daemon. This daemon is no longer run since the pipeline
   updates run and lane statuses by writing directly to the database. 
   Remove the script, npg_status_watcher, for detecting run status JSON
   files in run folders and updating database run and lane statuses,
   which was run by the status daemon.

release 91.14.0
 - Remove live tests for st::api::lims XML driver and other XML-based APIs.
   The CI tests are mostly run on hosts with no access to either production
   or development hosts. 
 - NPG_TEST_TRACKING_CONFIGPATH environment variable can be used to set a
   custom location of the Clearpress configuration file for unit tests.
   The default location of the file, data/config.ini, is used if the
   variable is unset. 
 - Move README file to README.md, improve Markdown format. Add sections
   describing environment variables and tags.
 - Move db schema dump, which is only used for tests, from the data to t/data
   directory.
 - Block access to tsv files via httpd_sfweb.conf

release 91.13.0
 - Extend npg_status2file script to optionally save statuses to the tracking
   database and renamed the script to npg_status_save.
 - Move from Travis CI to GitHub Actions.
 - metaref_repository attribute is added to the reference repository API

release 91.12.0
 - Change instrument and instrument format pages to only show current
   instruments and instrument formats
 - Remove superfluous columns in display tables for lists of instruments
   and instrument formats
 - Remove unused views (templates) for an instrument manufacturer
 - Remove manufacturer model and view classes, create manufacturer_name
   method in the instrument and instrument_format model classes

release 91.11.0
 - a partial reimplementation of the serialization framework for components
   and compositions in order to speed-up frequently used methods 
 - add geno files to disabled access list in http_sfweb.conf